infrastructure/base/vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    routed-gateway: "true"
